# apogee

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  ruff.toml  setup.cfg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPO_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_design.md
.github/workflows/: book.yml  ci.yml  content-weekly.yml  release.yml  vscode-publish.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/chapters/: 01-why-apogee-exists.md  02-getting-started.md  03-types.md  04-functions.md  05-ownership.md  06-concurrency.md  07-data.md  08-building.md  09-ai.md  10-whats-next.md
book/src/css/: apogee.css
content-gen/: .gitignore  README.md  package-lock.json  package.json
content-gen/src/: cli.js
content-gen/src/commands/: comparison.js  corpus.js  devlog.js  hn-post.js  tutorial.js
content-gen/src/lib/: claude.js  github.js  output.js  prompts.js
docs/: WHY_APOGEE.md
examples/: showcase.apg
foundation/: ATTORNEY_LETTER.md  CORPORATE_MEMBERSHIP.md  FOUNDATION_ARTICLES.md  RFC_PROCESS.md
foundation/aeps/: AEP-0001-design-philosophy.md
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: compiler.js  index.js
mcp-server/test/: tools.test.js
play/: next.config.mjs  package-lock.json  package.json  vercel.json
play/src/app/: globals.css  layout.tsx  page.tsx
play/src/components/: Editor.tsx  OutputPanel.tsx  TopBar.tsx
play/src/lib/: apogee-language.ts  apogee-theme.ts  compiler.ts  examples.ts
spec/: SPEC.md
src/: __init__.py  ast_nodes.py  cli.py  emitter.py  lexer.py  parser.py  typechecker.py
stdlib/: collections.apg  data.apg  http.apg  io.apg
tests/: test_runner.py
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/client/: package-lock.json  package.json  tsconfig.json
vscode-extension/client/src/: extension.ts
vscode-extension/server/: package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: apogee.json
vscode-extension/syntaxes/: apogee.tmLanguage.json
(+2 files in other folders)
