[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apogee-lang"
version = "0.1.0"
description = "Apogee — a programming language for the AI era"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tyler Walker"}
]
keywords = ["programming-language", "transpiler", "compiler", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
]

[project.scripts]
apogee = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
